# unesun-sambara

./: .gitignore  01_kv.tsv.xz  CNAME  Cargo.toml  README.md  build.bat  build.sh  index.html  package-lock.json  package.json  serve.sh  tailwind.config.js
config/: codepoint.txt  latin.csv  version.txt
pkg/: package.json  uns_editor.d.ts  uns_editor.js  uns_editor_bg.wasm  uns_editor_bg.wasm.d.ts
scripts/: prepare-dictionary.js
src/: lib.rs  styles.css
src/config/: settings.rs
src/dictionary/: lookup.rs
src/editor_core/: editor_state.rs
src/translit/: renderer.rs
texts/: README.md  manifest.json  oyun_tulhigur_1.txt
